feat: docker 테스트
Docker를 통해 외부 기능을 사용할 수 있도록 구현

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,39 @@
 version: '3'
 
 services:
-  db:
-    image: postgres
-    environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
+  web:
+    build: .
+    command: python3 manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./:/app/
     ports:
-      - "5432:5432"
+      - "8000:8000"
+    depends_on:
+      - db
+      - redis
+
+  db:
+    image: postgres:latest
+    environment:
+      - POSTGRES_DB=mydb
+      - POSTGRES_USER=myuser
+      - POSTGRES_PASSWORD=mypassword
+
+  redis:
+    image: redis:latest
+
+  celery_worker:
+    build: .
+    command: celery -A SilverLining worker -l info
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+
+  celery_beat:
+    build: .
+    command: celery -A SilverLining beat -l info
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
