--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,16 @@ services:
     depends_on:
       - db
       - redis
+      - migration
+
+  migration:
+    command:
+      - python3 manage.py migrate
+      - python3 manage.py compilemessgae
+    volumes:
+      - .:/app
+    depends_on:
+      - db
 
   db:
     image: postgres:latest
