--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - redis
     environment:
       DATABASE_URL: postgres://myuser:mypassword@db:5432/mydb
+    devices:
+      - "/dev/video0:/dev/video0"
 
   db:
     image: postgres:latest
