--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     environment:
       DATABASE_URL: postgres://myuser:mypassword@db:5432/mydb
     devices:
-      - "/dev/video0:/dev/video0"
+      - "/dev/video0:/dev/video0"  # 호스트의 웹캠 장치를 컨테이너에 추가
+
 
   db:
     image: postgres:latest
