--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,33 @@
-server {
-    listen 80;
-    server_name localhost;
+worker_processes 1;
 
-    location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+events {
+    worker_connections 1024;
+}
 
-    location /static/ {
-        alias /app/static/;
-    }
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    location /media/ {
-        alias /app/media/;
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://web:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /static/ {
+            alias /static/;
+        }
+
+        location /media/ {
+            alias /media/;
+        }
     }
 }
