--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,7 @@ services:
       - db
       - redis
     environment:
-      DJANGO_SETTINGS_MODULE: SilverLining.settings
-      PYTHONUNBUFFERED: 1
-      SECRET_KEY: ${SECRET_KEY}
-      OPEN_API_KEY: ${OPEN_API_KEY}
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+      DATABASE_URL: postgres://myuser:mypassword@db:5432/mydb
 
   nginx:
     image: nginx:latest
