--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,11 +23,11 @@ http {
         }
 
         location /static/ {
-            alias /static/;
+        alias /app/static/;
         }
 
         location /media/ {
-            alias /media/;
+        alias /app/media/;
         }
     }
 }
