--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    command: sh -c "gunicorn --bind 0.0.0.0:8000 SilverLining.wsgi:application"
+    command: sh -c "if [ ! -f /app/.initialized ]; then python manage.py migrate --noinput && python manage.py compilemessages && touch /app/.initialized; fi && gunicorn --bind 0.0.0.0:8000 SilverLining.wsgi:application"
     volumes:
       - .:/app
     ports:
@@ -38,3 +38,7 @@ services:
 
 volumes:
   postgres_data:
+
+networks:
+  webnet:
+    driver: bridge
