--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,17 +5,17 @@ events {
 }
 
 http {
-    include       mime.types;
+    include       /etc/nginx/mime.types;  # 올바른 mime.types 파일 경로
     default_type  application/octet-stream;
 
     sendfile        on;
     keepalive_timeout  65;
 
     server {
-        listen 8080;
+        listen 80;  # 내부에서 80번 포트를 청취합니다.
 
         location / {
-            proxy_pass http://web:8000;
+            proxy_pass http://web:8000;  # gunicorn 서버로 요청을 프록시
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,11 +23,11 @@ http {
         }
 
         location /static/ {
-        alias /app/static/;
+            alias /app/static/;  # 정적 파일 경로를 /app/static/으로 설정
         }
 
         location /media/ {
-        alias /app/media/;
+            alias /app/media/;  # 미디어 파일 경로를 /app/media/으로 설정
         }
     }
 }
