--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.8'
 services:
   web:
     build: .
+    command: sh -c "if [ ! -f /app/.initialized ]; then python manage.py migrate --noinput && python manage.py compilemessages && touch /app/.initialized; fi && gunicorn --bind 0.0.0.0:8000 SilverLining.wsgi:application"
+    volumes:
+      - .:/app
     ports:
       - "8000:8000"
     depends_on:
@@ -10,6 +13,8 @@ services:
       - redis
     environment:
       DATABASE_URL: postgres://myuser:mypassword@db:5432/mydb
+    networks:
+      - backend
 
   nginx:
     image: nginx:latest
@@ -20,6 +25,8 @@ services:
       - ./static:/static
     depends_on:
       - web
+    networks:
+      - backend
 
   db:
     image: postgres:latest
@@ -29,13 +36,17 @@ services:
       POSTGRES_PASSWORD: mypassword
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend
 
   redis:
     image: redis:latest
+    networks:
+      - backend
 
 volumes:
   postgres_data:
 
 networks:
-  webnet:
+  backend:
     driver: bridge
