chore: 배포를 위한 수정
배포를 위해 기능 추가 및 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,7 @@ http {
 
     server {
         listen 8080;  # 내부에서 80번 포트를 청취합니다.
+        server_name silverlinings.site www.silverlinings.site;
 
         location / {
             proxy_pass http://web:8000;  # gunicorn 서버로 요청을 프록시
