--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,11 +12,12 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 8080;  # 내부에서 80번 포트를 청취합니다.
+        listen 8080;
         server_name silverlinings.site www.silverlinings.site;
 
+        # 이하 내용은 현재 설정과 동일하게 유지합니다.
         location / {
-            proxy_pass http://web:8000;  # gunicorn 서버로 요청을 프록시
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,11 +25,12 @@ http {
         }
 
         location /static/ {
-            alias /app/static/;  # 정적 파일 경로를 /app/static/으로 설정
+            alias /app/static/;
         }
 
         location /media/ {
-            alias /app/media/;  # 미디어 파일 경로를 /app/media/으로 설정
+            alias /app/media/;
         }
     }
+
 }
