chore: 배포를 위한 수정
배포를 위해 기능 추가 및 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,11 +25,11 @@ http {
         }
 
         location /static/ {
-            alias /app/static/;
+            alias /static/;
         }
 
         location /media/ {
-            alias /app/media/;
+            alias /media/;
         }
     }
 
