--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,11 +25,11 @@ http {
         }
 
         location /static/ {
-            alias /static/;
+            alias /app/static/;
         }
 
         location /media/ {
-            alias /media/;
+            alias /app/media/;
         }
     }
 
