--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,5 @@
+
+
 worker_processes 1;
 
 events {
@@ -5,17 +7,17 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;  # 올바른 mime.types 파일 경로
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
     sendfile        on;
     keepalive_timeout  65;
 
     server {
-        listen 8080;
+        listen 80;
         server_name silverlinings.site www.silverlinings.site;
 
-        # 이하 내용은 현재 설정과 동일하게 유지합니다.
+
         location / {
             proxy_pass http://web:8000;
             proxy_set_header Host $host;
@@ -25,11 +27,11 @@ http {
         }
 
         location /static/ {
-            root /app/static/;
+            alias /app/static/;
         }
 
         location /media/ {
-            root /app/media/;
+            alias /app/media/;
         }
     }
 
