--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,11 +27,11 @@ http {
         }
 
         location /static/ {
-            alias /app/static/;
+            alias /staticfiles/;
         }
 
         location /media/ {
-            alias /app/media/;
+            alias /media/;
         }
     }
 
