--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,3 @@
-
-
 worker_processes 1;
 
 events {
@@ -13,10 +11,18 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # www가 없는 요청을 www가 포함된 도메인으로 리다이렉트
     server {
         listen 80;
-        server_name silverlinings.site www.silverlinings.site;
+        server_name silverlinings.site;
 
+        # www.silverlinings.site로 리다이렉트
+        return 301 http://www.silverlinings.site$request_uri;
+    }
+
+    server {
+        listen 80;
+        server_name www.silverlinings.site;
 
         location / {
             proxy_pass http://web:8000;
@@ -34,5 +40,4 @@ http {
             alias /media/;
         }
     }
-
 }
