--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,9 @@ numpy==1.26.4
 openai==1.30.3
 opencv-python==4.9.0.80
 packaging==24.0
+pandas==2.2.2
 pillow==10.3.0
+plotly==5.22.0
 prompt_toolkit==3.0.45
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -60,6 +62,7 @@ PyJWT==2.8.0
 python-crontab==3.1.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2024.1
 redis==5.0.4
 requests==2.32.2
 rfc3986==1.5.0
@@ -67,6 +70,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.0
+tenacity==8.3.0
 toposort==1.10
 tqdm==4.66.4
 typing_extensions==4.12.0
